<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpenseDetailsActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryVariant"
        android:elevation="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/expense_details"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/app_menu_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/more_menu_icon"
            android:src="@drawable/ic_more_vert"
            app:tint="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/exp_details_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/lorem_ipsum"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/exp_details_tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TableRow
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cost (KES):" />

            <TextView
                android:id="@+id/exp_details_tv_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="120.0" />
        </TableRow>

        <TableRow
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Category:" />

            <TextView
                android:id="@+id/exp_details_tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="Lunch" />
        </TableRow>

        <TableRow
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date added:" />

            <TextView
                android:id="@+id/exp_details_tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="2022-02-02" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/table"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent">

        <Button
            android:id="@+id/exp_details_btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit" />

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/exp_details_btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_red"
            android:text="Delete" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>